整理模板格式需求.

--- a/模板格式需求.md
+++ b/模板格式需求.md
@@ -1,7 +1,8 @@
 # 模板需求
 1. 天表将日期后缀替换为`${date}`
-2. 将字段`start_time` `end_time` 替换为`${start_time}` `${end_time}`
-3. 举例
+2. 将字段`start_time` `end_time`及其他来自真实表的字段替换为`${start_time}` `${end_time}`格式
+3. 将参数化范围限定在: where, having子句内来自非子查询并且来自真实表的纯字段（所以sum(a)不参数化)
+4. 举例
 
 ```
 select a,b,c from tablename_${date} where start_time > ${start_time} and end_time < ${end_time};
