--- a/模板格式需求.md
+++ b/模板格式需求.md
@@ -1,11 +1,13 @@
 # 模板需求
-1. 天表将日期后缀替换为`${date}`。
-    * 如`mada.tableprefix_211205`参数化为`mada.tableprefix_${date}`
-2. 将字段`start_time` `end_time`及其他来自mada库的字段替换为`${start_time}` `${end_time}`格式
+1. 天表/月表将日期后缀删除。
+    * 如`mada.tableprefix_211205`参数化为`mada.tableprefix`
+    * 如`mada.tableprefix_month_2112`参数化为`mada.tableprefix_month`
+2. 将字段`start_time`及其他来自mada库的字段替换为`${start_time}`等
+3. 特别地对于涉及`start_time`字段的`<` `<=`替换为`end_time`
 3. 将参数化范围限定在: where, having子句内来自非子查询并且来自真实表的纯字段（所以sum(a)不参数化)
 4. `IN`的列表折叠为只包含1个字段的列表。如`a in (1, 2, 3)`参数化为`a in (${a})`
 4. 举例
 
 ```
-select a,b,c from tablename_${date} where start_time > ${start_time} and end_time < ${end_time};
+select a,b,c from tablename where start_time > ${start_time} and start_time < ${end_time};
 ```
