--- a/模板格式需求.md
+++ b/模板格式需求.md
@@ -2,12 +2,11 @@
 1. 天表/月表将日期后缀删除。
     * 如`mada.tableprefix_211205`参数化为`mada.tableprefix`
     * 如`mada.tableprefix_month_2112`参数化为`mada.tableprefix_month`
-2. 将字段`start_time`及其他来自mada库的字段替换为`${start_time}`等
-3. 特别地对于涉及`start_time`字段的`<` `<=`替换为`end_time`
-3. 将参数化范围限定在: where, having子句内来自非子查询并且来自真实表的纯字段（所以sum(a)不参数化)
+    * 如`ma.tableprefix211210`参数化为`ma.tableprefix`
+    * 如`li.tableprefix211210`参数化为`li.tableprefix`
+2. 将字段`start_time`及其他来自源表的字段参数化为`${start_time}`
+    * 特别地对于涉及`start_time`字段的`<` `<=`表达式参数化为`${end_time}`。
+    * 将参数化范围限定在: where子句, having子句内；字段未经计算转化（所以sum(a)不参数化)；from子句内没有子查询
 4. `IN`的列表折叠为只包含1个字段的列表。如`a in (1, 2, 3)`参数化为`a in (${a})`
-4. 举例
-
-```
-select a,b,c from tablename where start_time > ${start_time} and start_time < ${end_time};
-```
+ 
+select distinct extracted_template_for_generate_testsql from (select extracted_template_for_generate_testsql, row_number() over(partition by extracted_template) as r from sqls where extracted_template is not null) t where r=1;
